--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!-- HTML -->
+<hmtl>
+	<head>
+		<title>Hello World</title>
+	</head>
+
+	<body>
+		 
+		<h1>Hello World</h1>
+
+	</body>
+
+
+</hmtl>
