--- a/CSS Lesson I.html
+++ b/CSS Lesson I.html
@@ -5,7 +5,7 @@
 		<title>CSS Lesson</title>
 		<meta name="keywords" content="lesson, CSS, Binghamton University">
 		<meta name="description" content="This is a basic intro to CSS coding.">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="stylesheet" type="text/css" href="css/css-lesson-01.css">
 
 		<style type="text/css">
 
