--- a/css-lesson-03.html
+++ b/css-lesson-03.html
@@ -17,13 +17,94 @@
 		<div id="wrapper">
 			<div class="article">
 
+				<h1>Box Model</h1>
+
+				<div class="masthead">
+					navigation here
+					</div>
 				<div class="box">
 					my first box
 					</div>
+				<div class="box">
+					my second box
+					</div>
+				<div class="box">
+					my third box
+					</div>
+					<div class="box">
+					my first box
+					</div>
+				<div class="box">
+					my second box
+					</div>
+				<div class="box">
+					my third box
+					</div>
+					<div class="box">
+					my first box
+					</div>
+				<div class="box">
+					my second box
+					</div>
+				<div class="box">
+					my third box
+					</div>
 
+					<h1>Sizing Units</h1>
+
+					<p>
+						px unit: the number 1 absolute unit
+					</p>
+
+					<p>
+						% percentage units
+
+					<div>
+						 <div class="half">
+						first half
+					</div>
+					<div class="second-half">
+						second half
+					</div>
+			</div>
+
+			<p>
+				em units. 
+			</p>
+
+			<div class="em-size-box">
+				</div>
+
+			<div class="new-font-size">
+				<div class="em-size-box">
+				</div>
+			</div>
+
+			<p>
+				rem units. 
+			</p>
+
+			<div class="new-font-size">
+				<div class="rem-size-box">
+				</div>
+			</div>
+
+			<div class="rem-size-box">
+				</div>
+
+			<p>
+				vw and vh units.
+			</p>
+
+			<div class="vw-vh-demo">
+				VH and VW demo
 			</div>
 
 		</div>
+
+<div class="vw-vh-demo">
+				VH and VW demo
+			</div>
 
 	</body>
 
