--- a/css-lesson-04.html
+++ b/css-lesson-04.html
@@ -40,6 +40,11 @@
 				<div class="block"></div>
 				<div class="block"></div>
 				<div class="block"></div>
+				<div class="block"></div>
+				<div class="block"></div>
+				<div class="block"></div>
+				<div class="block"></div>
+			
 		</div> 
 
 	</body>
