--- a/css-lesson-05.html
+++ b/css-lesson-05.html
@@ -2,9 +2,10 @@
 
 <html>
 	<head>
-		<title>CSS Lesson 4: Intro to CSS Grid  </title>
+		<title>CSS Lesson 5: Intro to CSS Grid  </title>
 		<meta name="keywords" content="lesson, CSS, Binghamton University">
 		<meta name="description" content="This is a basic intro to CSS coding.">
+		<link rel="stylesheet" type="text/css" href="css/grid.css">
 		<link rel="stylesheet" type="text/css" href="css/css-lesson-05.css">
 
 		<link rel="preconnect" href="https://fonts.gstatic.com"> 
@@ -15,12 +16,29 @@
 	<body>
 
 		<div id="wrapper">
-			<div class="grid" id="masthead"></div> 
-			<div class="logo width-12-12-m width 6-12">logo</div>
-			<div class="nav width-12-12-m width 6-12">navigation</div>
 
+			<div class="grid" id="masthead">
+			<div class="logo width-12-12-m width-4-12">logo</div>
+			<div class="nav width-12-12-m width-8-12">navigation</div>
+		</div> 
+
+			<div class="grid" id="main">
+			<div class="thumb width-6-12-m width-3-12">thumb</div>
+			<div class="thumb width-6-12-m width-3-12">thumb</div>
+			<div class="thumb width-6-12-m width-3-12">thumb</div>
+			<div class="thumb width-6-12-m width-3-12">thumb</div>
+			<div class="thumb width-6-12-m width-3-12">thumb</div>
+			<div class="thumb width-6-12-m width-3-12">thumb</div>
+			<div class="thumb width-6-12-m width-3-12">thumb</div>
+			<div class="thumb width-6-12-m width-3-12">thumb</div>
+		</div>
+
+			<div class="grid" id="footer">
+				<div class="width 12-12-m width-12-12">footer</div>
+			</div>
 
 		</div> 
+
 
 	</body>
 
