--- a/css-lesson-04.html
+++ b/css-lesson-04.html
@@ -29,21 +29,21 @@
 			-->
 
 			<div id="grid-complex">
-				<div class="block"></div>
-				<div class="block tall"></div>
-				<div class="block"></div>
-				<div class="block"></div>
-				<div class="block"></div>
-				<div class="block"></div>
-				<div class="block wide"></div>
-				<div class="block"></div>
-				<div class="block"></div>
-				<div class="block"></div>
-				<div class="block"></div>
-				<div class="block"></div>
-				<div class="block"></div>
-				<div class="block"></div>
-				<div class="block"></div>
+				<div class="block">a</div>
+				<div class="block">b</div>
+				<div class="block">c</div>
+				<div class="block">d</div>
+				<div class="block">e</div>
+				<div class="block">f</div>
+				<div class="block">g</div>
+				<div class="block">h</div>
+				<div class="block">i</div>
+				<div class="block">j</div>
+				<div class="block tall">k</div>
+				<div class="block">l</div>
+				<div class="block">m</div>
+				<div class="block">n</div>
+				<div class="block">o</div>
 			
 		</div> 
 
