--- a/index.html
+++ b/index.html
@@ -1,13 +1,61 @@
-<hmtl>
+<!DOCTYPE html>
+<html>
 	<head>
-		<title>Hello World</title>
-	</head>
+		<meta name="keywords" content="design, html, css, frontend, graphic design">
+		<meta name="description" content="Welcome to Molly Alexander">
+		<title>Molly Alexander</title>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+		<script src="js/main.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/grid.css">
+		<link rel="stylesheet" type="text/css" href="css/style.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com"> 
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+		<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat&display=swap" rel="stylesheet">
+</head>
 
-	<body>
-		 
-		<h1>Hello World</h1>
 
-	</body>
+<body>
+	<div id="wrapper">
+		<div id="masthead" class="grid">
+			<div id="logo" class="width-9-12-m width 5-12">
+				<a href="/" title="Molly Alexander">
+				<svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 281 285.8"><defs><style>.cls-1{font-size:213.34px;font-family:Helvetica-Oblique, Helvetica;font-style:oblique;}.cls-2,.cls-3{stroke:#000;stroke-miterlimit:10;stroke-width:2px;}.cls-3{fill:none;}</style></defs><text class="cls-1" transform="translate(0 183.19)">M</text><line class="cls-2" x1="193.7" y1="30.37" x2="280.13" y2="182.81"/><line class="cls-3" x1="168.5" y1="120.39" x2="245.32" y2="120.39"/></svg>
+				<h1>Molly Alexander</h1>
+				</a>
+			</div>
+
+			<div id="nav-button" class="width-3-12-m width-12-12">
+				<div id="nav-button-holder">
+					<button class="hamburger hamburger--squeeze" type="button">
+						<span class="hamburger-box">
+							<span class="hamburger-inner"></span>
+						</span>
+					</button>
+				</div>
+
+			<div id="nav" class="width-12-12-m width-7-12">
+				<ul>
+					<li><a href="#">Home</a></li>
+					<li><a href="#">Portfolio</a></li>
+					<li><a href="#">Blog</a></li>
+					<li><a href="#">Contact</a></li>
+				</ul>
+			</div>
+
+		</div>
 
 
-</hmtl>
+		<div id="main" class="grid">
+		</div>
+
+
+		<div id="footer" class="grid">
+		</div>
+
+
+	</div>
+
+</body>
+
+
+</html>
