--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 	<head>
 		<meta name="keywords" content="design, html, css, frontend, graphic design">
 		<meta name="description" content="Welcome to Molly Alexander">
-		<title>Molly Alexander</title>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
+		<title>MOLLY ALEXANDER</title>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
 		<script src="js/main.js"></script>
 		<link rel="stylesheet" type="text/css" href="css/grid.css">
 		<link rel="stylesheet" type="text/css" href="css/style.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com"> 
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-		<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&family=Poppins&display=swap" rel="stylesheet">
 </head>
 
 
@@ -32,29 +32,29 @@
 <line class="st2" x1="162.3" y1="0" x2="248.7" y2="152.4"/>
 <line class="st2" x1="159.5" y1="89.8" x2="213.3" y2="89.8"/>
 </svg>
-				<h1>Molly Alexander</h1>
+				<h1>MOLLY ALEXANDER</h1>
 				</a>
-			</div>
-
 			<div id="nav-button" class="width-3-12-m width-12-12">
-				<div id="nav-button-holder">
-					<button class="hamburger hamburger--squeeze" type="button">
-						<span class="hamburger-box">
-							<span class="hamburger-inner"></span>
-						</span>
-					</button>
-				</div>
+        <div id="nav-button-holder">
+          <button class="hamburger hamburger--squeeze" type="button">
+            <span class="hamburger-box">
+              <span class="hamburger-inner"></span>
+            </span>
+          </button>
+        </div>
+      </div>
 
-			<div id="nav" class="width-12-12-m width-7-12">
-				<ul>
-					<li><a href="#">Home</a></li>
-					<li><a href="#">Portfolio</a></li>
-					<li><a href="#">Blog</a></li>
-					<li><a href="#">Contact</a></li>
-				</ul>
-			</div>
 
-		</div>
+      <div id="nav" class="width-12-12-m width-7-12">
+        <ul>
+          <li><a href="#">Portfolio</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contact</a></li>
+       </ul> 
+      </div>
+
+    </div>
 
 
 		<div id="main" class="grid">
