--- a/home.html
+++ b/home.html
@@ -22,7 +22,7 @@
     <div id="masthead" class="grid">
 
       <div id="logo" class="width-9-12-m width-5-12">
-        <a href="/" title="MOLLY ALEXANDER">
+        <a href="home.html" title="MOLLY ALEXANDER">
           <?xml version="1.0" encoding="utf-8"?>
             <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.35 285.79"><defs><style>.cls-1{isolation:isolate;font-size:213.34px;fill:#fff;font-family:Helvetica;}.cls-2{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2px;}</style></defs><text class="cls-1" transform="translate(0 183.18)">M</text><line class="cls-2" x1="162.08" y1="29.93" x2="248.48" y2="182.33"/><line class="cls-2" x1="159.28" y1="119.73" x2="213.08" y2="119.73"/></svg>
           <h1>MOLLY ALEXANDER</h1>
@@ -54,15 +54,18 @@
       <div id="intro" class="width-12-12-m width-12-12">
         <div id="intro-holder">
           <h1>Meet Molly Alexander:</h1>
-          <h3>👩🏼‍💻 Graphic designer</h3>
-          <h3>🎞 Content creator</h3>
-          <h3>📱 Social media coordinator</h3>
+          <h3>👩🏼‍💻 Graphic Designer</h3>
+          <h3>📸 Content Creator</h3>
+          <h3>📱 Social Media Coordinator</h3>
+          <h3>🗽 Based in New York</h3>
         </div>
     </div>
 
+    <br>
+
     <div id="work" class="width-12-12-m width-12-12">
 
-      <h3><a href="portfolio.html">The Portfolio</a></h3>
+      <h3><a href="portfolio.html">From the Portfolio</a></h3>
 
       <div id="work-holder" class="grid">
 
@@ -80,29 +83,9 @@
           <a class="inner" href="" title="I Made You a Mixtape">
             <div class="work-inside">
               <h2>I Made You a Mixtape</h2>
-              <p>A short series of casette tapes with motivational titles.</p>
+              <p>Like music to your ears, but different and no Walkman required.</p>
             </div>
             <img title="I Made You a Mixtape" src="images/work2.png" />
-          </a>
-        </div>
-
-        <div class="width-12-12-m width-6-12 work-item">
-          <a class="inner" href="" title="What's the password?">
-            <div class="work-inside">
-              <h2>What's the password?</h2>
-              <p>Inspired by my garage keypad, this series offers tech support but not in the way you think.</p>
-            </div>
-            <img title="What's the password?" src="images/work3.png" />
-          </a>
-        </div>
-
-        <div class="width-12-12-m width-6-12 work-item">
-          <a class="inner" href="" title="Watch the Gap">
-            <div class="work-inside">
-              <h2>Watch the Gap</h2>
-              <p>The most exciting place is the one you haven't arrived at yet. Another motivational series using the Metro North train.</p>
-            </div>
-            <img title="Watch the Gap" src="images/work4.png" />
           </a>
         </div>
 
@@ -111,33 +94,35 @@
       </div>
 
        <div id="writings" class="width-12-12-m width-12-12">
-        <h3><a href="blog.html">The Blog</a></h3>
+        <h3><a href="blog.html">From the Blog</a></h3>
         <div id="writings-holder" class="grid">
           <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Post #1</a></h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor varius porttitor. Etiam ac euismod nisl, vitae ultricies lorem. Nam nec convallis augue. Phasellus ut nisi id massa sollicitudin aliquam. Phasellus viverra mi sit amet augue aliquet, quis laoreet tortor faucibus. Suspendisse potenti. Nulla vehicula, arcu at consectetur scelerisque, tellus nisi sagittis lacus, nec finibus odio felis sit amet metus. <p>
+            <div class="date-holder"><p class="date">07.01.2021</p></div>
+            <h2><a href="blog1.html">Why All Designers Should Consider the M1 Chip a Necessity</a></h2>
+            <p>If you've ever wondered what the silence sounds like when your computer *isn't* blowing a literal gasket trying to open Photoshop, Illustrator and iMovie all at once – click here and keep reading. Let's deep dive into the reason why I needed the upgrade – and how it's going almost a year later... <p>
+              <h4><a href="blog1.html">Read More</a></h4>
           </div>
 
           <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Post #2</a></h2>
-            <p>Maecenas at odio faucibus elit malesuada vulputate vel sed nisl. Mauris tortor sem, fringilla vitae condimentum vitae, aliquam nec sapien. Praesent lobortis dui vel tortor pretium finibus. Quisque non gravida felis. Phasellus imperdiet ornare leo nec mattis. Aliquam dictum aliquam imperdiet. Curabitur quis tortor nisi. Duis nec dolor vitae est dictum maximus nec eget diam.<p>
+            <div class="date-holder"><p class="date">07.01.2021</p></div>
+            <h2><a href="blog2.html">10 Social Media Tips to Get You Started</a></h2>
+            <p>Ever stare at your or your business's social media page and wonder if you're doing anything right? Plateaued at a meager amount of followers? Or barely engaged followers? These 10 tips are sure to bring your page more eyeballs, engagement, and everlasting growth...<p>
+              <h4><a href="blog2.html">Read More</a></h4>
           </div>
 
           <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Post #3</a></h2>
-            <p>Sed in elementum elit. Vivamus quam tellus, finibus nec tempus in, consequat in erat. Aenean et turpis condimentum, sagittis ante vitae, mattis tellus. Quisque ullamcorper quis dui at consectetur. Fusce egestas neque at sem pellentesque, quis feugiat libero molestie.<p>
+            <div class="date-holder"><p class="date">07.01.2021</p></div>
+            <h2><a href="blog3.html">Why Pinterest is a Top Tier Marketing Tool</a></h2>
+            <p>Ah – the age old question. "How many platforms do I have to be on?" For every business or entrepreneur, this question reeks of fear and being too spread out across your social accounts. Today we take a closer look at Pinterest and why it is the most effortless and efficient social app you should have...<p>
+              <h4><a href="blog3.html">Read More</a></h4>
           </div>
 
           <div class="width-12-12-m width-6-12 writing-item">
-            <div class="date-holder"><p class="date">18 APR, 2020</p></div>
-            <h2><a href="">Post #4</a></h2>
-            <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam eu nisi vitae nibh imperdiet hendrerit. Suspendisse eget maximus libero. Proin non magna ac dolor consectetur elementum. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec fermentum sit amet mauris in porttitor. Cras ac tellus a tellus vestibulum finibus.<p>
+            <div class="date-holder"><p class="date">07.01.2021</p></div>
+            <h2><a href="blog4.html">"What the F*** is Tik Tok and do I need it?"</a></h2>
+            <p> Whether you're 14 or 40, you're sure to have heard about Tik Tok. As a business of any kind, adding another social media to your to-do list sounds exhausting. But, just one video hitting the infamous FYP ("for you page" if you're just learning the lingo) can gain you a pretty serious amount of followers. Here's how to get started. <p>
+              <h4><a href="blog4.html">Read More</a></h4>
           </div>
-
-
 
         </div>
 
