--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
             <p>Got questions? A cool idea? Even better - a pitch?! Send it my way using the form below.</p>
 
             <div style="font-family: Poppins; border-radius: 5px; padding: 1px 30px; width: 75%;">
-   <form accept-charset="UTF-8" action="https://getform.io/eg133" method="POST" enctype="multipart/form-data" target="_blank" id="wpform">
+   <form accept-charset="UTF-8" action="#" method="POST" enctype="multipart/form-data" target="_blank" id="wpform">
       <br>
       <div>
          <label>Full Name</label>
