--- a/about.html
+++ b/about.html
@@ -58,17 +58,17 @@
           <div class="width-12-12-m width-9-12 writing-item">
             <h2><a href="">About</a></h2>
 
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam auctor varius porttitor. Etiam ac euismod nisl, ultricies lorem. Nam nec convallis augue. Phasellus ut nisi id massa sollicitudin aliquam. Phasellus viverra mi sit amet augue aliquet, quis laoreet tortor faucibus. Suspendisse potenti. Nulla vehicula, arcu at consectetur scelerisque, tellus nisi sagittis lacus, nec finibus odio felis sit amet metus. <p>
+            <p>Molly Alexander is a 21-year old English and Graphic Design student attending Binghamton University, and working everywhere.</p>
 
-            <p><a href="images/resume.pdf" title="resume">Resume (.pdf)</a></p>
+            <img src="images/me.jpg">
 
-            <p>Donec vel ultrices nunc, vitae finibus odio. Phasellus eget ligula tempus, sodales risus vitae, pellentesque turpis. Vivamus facilisis ante at risus rutrum aliquam. Aliquam porta vehicula sagittis. Aenean efficitur ornare faucibus. Sed facilisis bibendum sapien at vehicula. Etiam varius laoreet magna in interdum. Etiam mauris ligula, tincidunt vitae arcu nec, euismod rhoncus risus.</p>
+            <p>Starting in journalism with a local column at age 11, writing had been one of her first creative passions. Fast forward to the present, Molly was the former Digital Content and Brand Marketing Assistant for Corey Paige Designs, with work featured with Dormify, and also worked as the graphic designer for the Office of External Scholarships and Undergraduate Research where she was also a student assistant with videography. She is currently holding two social media roles, at companies Minika Ko and TilePix. </p>
 
-            <p>Donec aliquam ultrices odio, non luctus justo condimentum id. Ut sed lectus vitae neque accumsan iaculis vitae eget augue. Proin interdum molestie posuere. Maecenas et metus lorem. Nulla mollis eget felis at varius. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Maecenas auctor porttitor magna eu tincidunt. Curabitur at ornare erat. Duis ac neque sollicitudin metus pellentesque porta. Aliquam bibendum ex id risus scelerisque elementum.<p>
+            <p>View Molly's Resume: <a href="images/resume.pdf" title="resume">Resume (.pdf)</a></p>
 
-            <p>Fusce sit amet ultrices magna. Nam id nulla id metus commodo egestas. Sed condimentum, ex ac ultricies hendrerit, eros diam pellentesque odio, ac condimentum nulla nisl sit amet lacus. Ut feugiat nibh massa, malesuada porttitor neque molestie eu. Fusce porta laoreet nulla. Aenean sit amet nisi quis lorem tempor molestie eu ut ipsum. Nullam egestas sodales efficitur.</p>
+            <p>In her free time, she creates content on Instagram and writes for her own fashion blog, and now, she codes!</p>
 
-            <p>Suspendisse maximus libero sed augue hendrerit, quis iaculis ante vehicula. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur sed facilisis eros. Vestibulum a scelerisque ex, ac fringilla justo. Aliquam erat volutpat. Phasellus ut viverra leo, aliquam gravida metus. Integer mollis gravida tempor. Nullam sapien nibh, finibus ac erat quis, euismod elementum urna. Maecenas finibus arcu ac mauris rutrum, at egestas odio tempus.</p>
+            
           </div>
 
         <div>
