--- a/index.html
+++ b/index.html
@@ -1,40 +1,35 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
-	<head>
-		<meta name="keywords" content="design, html, css, frontend, graphic design">
-		<meta name="description" content="Welcome to Molly Alexander">
-		<title>MOLLY ALEXANDER</title>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
-		<script src="js/main.js"></script>
-		<link rel="stylesheet" type="text/css" href="css/grid.css">
-		<link rel="stylesheet" type="text/css" href="css/style.css">
-		<link rel="preconnect" href="https://fonts.googleapis.com"> 
-		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
-		<link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&family=Poppins&display=swap" rel="stylesheet">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="keywords" content="design, html, css, frontend, developer, designer">
+  <meta name="description" content="Welcome to MOLLY ALEXANDER">
+  <title>MOLLY ALEXANDER</title>
+  <link rel="icon" type="image/png" href="images/icon.png">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js" integrity="sha512-n/4gHW3atM3QqRcbCn6ewmpxcLAHGaDjpEBu4xZd47N0W2oQ+6q7oc3PXstrJYXcbNU1OHdQ1T7pAP+gi5Yu8g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="js/main.js"></script> 
+  <link rel="stylesheet" type="text/css" href="css/grid.css">
+  <link rel="stylesheet" type="text/css" href="css/style copy.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com"> 
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
+    <link href="https://fonts.googleapis.com/css2?family=Jost:wght@500&family=Poppins&display=swap" rel="stylesheet">
 </head>
 
-
 <body>
-	<div id="wrapper">
-		<div id="masthead" class="grid">
-			<div id="logo" class="width-9-12-m width 5-12">
-				<a href="/" title="Molly Alexander">
-				<?xml version="1.0" encoding="utf-8"?>
-<!-- Generator: Adobe Illustrator 25.3.1, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
-<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="0 0 256.6 153.3" style="enable-background:new 0 0 256.6 153.3;" xml:space="preserve">
-<style type="text/css">
-	.st0{font-family:'Helvetica';}
-	.st1{font-size:213.34px;}
-	.st2{fill:none;stroke:#000000;stroke-width:2;stroke-miterlimit:10;}
-</style>
-<text transform="matrix(1 0 0 1 0.2246 153.2537)" class="st0 st1">M</text>
-<line class="st2" x1="162.3" y1="0" x2="248.7" y2="152.4"/>
-<line class="st2" x1="159.5" y1="89.8" x2="213.3" y2="89.8"/>
-</svg>
-				<h1>MOLLY ALEXANDER</h1>
-				</a>
-			<div id="nav-button" class="width-3-12-m width-12-12">
+
+  <div id="wrapper">
+
+    <div id="masthead" class="grid">
+
+      <div id="logo" class="width-9-12-m width-5-12">
+        <a href="home.html" title="MOLLY ALEXANDER">
+          <?xml version="1.0" encoding="utf-8"?>
+            <svg id="Layer_1" data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 249.35 285.79"><defs><style>.cls-1{isolation:isolate;font-size:213.34px;fill:#fff;font-family:Helvetica;}.cls-2{fill:none;stroke:#fff;stroke-miterlimit:10;stroke-width:2px;}</style></defs><text class="cls-1" transform="translate(0 183.18)">M</text><line class="cls-2" x1="162.08" y1="29.93" x2="248.48" y2="182.33"/><line class="cls-2" x1="159.28" y1="119.73" x2="213.08" y2="119.73"/></svg>
+          <h1>MOLLY ALEXANDER</h1>
+        </a>
+      </div>
+
+      <div id="nav-button" class="width-3-12-m width-12-12">
         <div id="nav-button-holder">
           <button class="hamburger hamburger--squeeze" type="button">
             <span class="hamburger-box">
@@ -44,30 +39,117 @@
         </div>
       </div>
 
-
       <div id="nav" class="width-12-12-m width-7-12">
         <ul>
-          <li><a href="#">Portfolio</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="about.html">About</a></li>
+          <li><a href="contact.html">Contact</a></li>
        </ul> 
       </div>
 
     </div>
 
+    <div id="main" class="grid">
+      <div id="intro" class="width-12-12-m width-12-12">
+        <div id="intro-holder">
+          <h1>Meet Molly Alexander:</h1>
+          <h3>👩🏼‍💻 Graphic Designer</h3>
+          <h3>📸 Content Creator</h3>
+          <h3>📱 Social Media Coordinator</h3>
+          <h3>🗽 Based in New York</h3>
+        </div>
+    </div>
 
-		<div id="main" class="grid">
-		</div>
+    <br>
+
+    <div id="work" class="width-12-12-m width-12-12">
+
+      <h3><a href="portfolio.html">From the Portfolio</a></h3>
+
+      <div id="work-holder" class="grid">
+
+        <div class="width-12-12-m width-6-12 work-item">
+          <a class="inner" href="" tile="Driver's License">
+            <div class="work-inside">
+              <h2>Driver's License</h2>
+              <p>Switch out a series of random numbers for a short but sweet love letter.</p>
+            </div>
+            <img title="Driver's License" src="images/work1.png" />
+          </a>
+        </div>
+
+        <div class="width-12-12-m width-6-12 work-item">
+          <a class="inner" href="" title="I Made You a Mixtape">
+            <div class="work-inside">
+              <h2>I Made You a Mixtape</h2>
+              <p>Like music to your ears, but different and no Walkman required.</p>
+            </div>
+            <img title="I Made You a Mixtape" src="images/work2.png" />
+          </a>
+        </div>
+
+        <br>
+
+      </div>
+
+       <div id="writings" class="width-12-12-m width-12-12">
+        <h3><a href="blog.html">From the Blog</a></h3>
+        <div id="writings-holder" class="grid">
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">07.01.2021</p></div>
+            <h2><a href="blog1.html">Why All Designers Should Consider the M1 Chip a Necessity</a></h2>
+            <p>If you've ever wondered what the silence sounds like when your computer *isn't* blowing a literal gasket trying to open Photoshop, Illustrator and iMovie all at once – click here and keep reading. Let's deep dive into the reason why I needed the upgrade – and how it's going almost a year later... <p>
+              <h4><a href="blog1.html">Read More</a></h4>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">07.01.2021</p></div>
+            <h2><a href="blog2.html">10 Social Media Tips to Get You Started</a></h2>
+            <p>Ever stare at your or your business's social media page and wonder if you're doing anything right? Plateaued at a meager amount of followers? Or barely engaged followers? These 10 tips are sure to bring your page more eyeballs, engagement, and everlasting growth...<p>
+              <h4><a href="blog2.html">Read More</a></h4>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">07.01.2021</p></div>
+            <h2><a href="blog3.html">Why Pinterest is a Top Tier Marketing Tool</a></h2>
+            <p>Ah – the age old question. "How many platforms do I have to be on?" For every business or entrepreneur, this question reeks of fear and being too spread out across your social accounts. Today we take a closer look at Pinterest and why it is the most effortless and efficient social app you should have...<p>
+              <h4><a href="blog3.html">Read More</a></h4>
+          </div>
+
+          <div class="width-12-12-m width-6-12 writing-item">
+            <div class="date-holder"><p class="date">07.01.2021</p></div>
+            <h2><a href="blog4.html">"What the F*** is Tik Tok and do I need it?"</a></h2>
+            <p> Whether you're 14 or 40, you're sure to have heard about Tik Tok. As a business of any kind, adding another social media to your to-do list sounds exhausting. But, just one video hitting the infamous FYP ("for you page" if you're just learning the lingo) can gain you a pretty serious amount of followers. Here's how to get started. <p>
+              <h4><a href="blog4.html">Read More</a></h4>
+          </div>
+
+        </div>
+
+    </div>
 
 
-		<div id="footer" class="grid">
-		</div>
+        <div id="footer" class="grid">
+          <div class="width-12-12-m width-12-12">
+            <p>Copyright 2021© Molly Alexander</p>
+          </div>
+        </div>
+
+        <div>
+
+        </div>
 
 
-	</div>
-
-</body>
 
 
-</html>
+
+
+
+
+
+
+
+
+
+
+
